front/fix text-align in static page

--- a/resources/sass/base/_Classes.sass
+++ b/resources/sass/base/_Classes.sass
@@ -388,6 +388,8 @@
     text-align: center
   &-left
     text-align: left
+  &-justify
+    text-align: justify
   &-required
     &::after
       content: "*"
